fix(behavior): prevent input overlap

--- a/src/components/BehaviorPanel/style.module.css
+++ b/src/components/BehaviorPanel/style.module.css
@@ -49,6 +49,7 @@
 .input-container:has(.input:focus),
 .input-container:has(.input:active) {
 	transform: translate(-0.1rem, -0.1rem);
+	z-index: 255;
 }
 
 .tooltip {
@@ -83,6 +84,8 @@
 .tooltip-text:hover {
 	visibility: visible;
 	opacity: 1;
+	transform: translate(0.1em, 0.1em);
+	transform: translateZ(0);
 }
 
 .tooltip-text a {
